[project]
name = "comfyui-cs-customnodes"
description = "The CS Transform node is a custom node for ComfyUI that applies a series of transformations to an input image and mask. The transformations include scaling, rotation, and translation, all centered around a specified pivot point. The node ensures that the transformed image is properly accommodated within a canvas, which can be expanded if needed."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/claussteinmassl/ComfyUI-CS-CustomNodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-CS-CustomNodes"
Icon = ""
